--- a/index.html
+++ b/index.html
@@ -13,61 +13,114 @@
 </head>
 
 <body>
-    <div id="content">
-        <header>
-            <nav>
-                <div class="button">Történet</div>
-                <div class="button">Recept</div>
-                <div class="button">Képek</div>
-            </nav>
-            <img src="isabela-kronemberger-hxOg4o5oNFA-unsplash.jpg" alt="">
-            <p>Mézeskalács </p>
-        </header>
-        <div id="tortenet">
-            <section class="imgBox"><img src="háziko1.png" alt=""></section>
-            <section class="textBox">
-                <section class="text">
-                    <h2>Történet</h2>
-                    <p>A mézeskalács olyan sütemény, mely változatos alakjával és díszítésével sokféle lehet. Fő
-                        hozzávalók a
-                        liszt, a méz, a tojás és fűszerek. Készítése komoly hagyományokkal rendelkezik, eredetileg az
-                        isteneknek
-                        felajánlott eledel, majd emberek közötti ajándék szerepét töltötte be.
-                    </p>
-                    <p>
-                        A mézeskalács készítő elismert szakma is egyben, melyhez jó kézügyesség szükséges, hiszen a
-                        mézeskalácsok népművészeti színvonalú díszítése időigényes munka. Magyarországon a középkor óta
-                        készítik
-                        és több településen is nagy hagyománya van a mézeskalács termékeknek, melyek nem tévesztendők
-                        össze a
-                        cukrász termékekkel.</p>
-                </section>
 
-                <a href="https://hu.wikipedia.org/wiki/M%C3%A9zeskal%C3%A1cs_(s%C3%BCtem%C3%A9ny)"
-                    target="_blank"><button>Folytatás</button></a>
-            </section>
-        </div>
-        <div id="recept">
-            <section class="imgBox"><img src="háziko2.png" alt=""></section>
-            <section class="textBox">
-                <h2>Mézeskalács ház Recept</h2>
-                <ul>
-                    <li>250 g akácméz</li>
-                    <li>100 g szobahőmérsékletű vaj</li>
-                    <li> 125 g porcukor</li>
-                    <li> 5 g fahéj (őrölt)</li>
-                    <li> 5 g gyömbér (őrölt)</li>
-                    <li> 3 g szegfűszeg (őrölt)</li>
-                    <li> 8 g holland kakaópor</li>
-                    <li>500 g búzafinomliszt (BL55)</li>
-                    <li> 3 g sütőpor</li>
-                    <li> 1 db tojás (közepes méretű)</li>
-                    <li> 1 csipet só</li>
-                </ul>
-            </section>
-        </div>
+    <header>
+        <nav>
+            <div class="button">Történet</div>
+            <div class="button">Recept</div>
+            <div class="button">Képek</div>
+        </nav>
+        <p>Mézeskalács </p>
+    </header>
+    <div id="tortenet">
+        <section class="imgBox">
+            <img src="háziko1.png" alt="">
+        </section>
+        <section class="textBox">
+            <h2>Történet</h2>
+            <p>
+                A méz hosszú időn át pótolhatatlan édesítőszer volt, így megbecsülése a belőle készített tésztára is
+                átment. Ezért jelentőséget, helyenként misztikus erőt is tulajdonítottak neki. Az ókori görögök a halott
+                szájába is mézeskalácsot tettek, hogy ezzel engesztelhesse ki Cerberust, az alvilág mogorva őrét.
+                Feljegyezték, hogy Püthagorasz nem élő állatot, hanem állatformájú mézeskalácsot áldozott az isteneknek.
+                Hazánkban már az aquincumi ásatásoknál is találtak több mézeskalács sütésre használt égetett
+                cserépformát. A méz királyi eledel volt. Bécsben 1368-ban már név szerint is említenek két
+                mézeskalácsost. Kölnben ma is hagyomány a mézeskalács-készítés, mely valószínűleg Nagy Lajos király
+                idejében, Aachenba készülő magyar zarándokokkal került oda. A 16/17. században Nürnbergben lendült fel a
+                formaalakítás művészi stílusa, ami egész Közép-Európában elterjedt. Ezért is következtetnek egyesek
+                tévesen arra, hogy maga a mézeskalács-készítés is nyugatról jött Magyarországra.
+
+            </p>
+            <p>
+                A magyar ősi méhész nemzet. Magyarország méhészetének 11. századi írott nyomai vannak. Egy 16. századi
+                irat utal "mézes báb"-ra. Mai ismereteink szerint az első magyarországi mézeskalácsos-céh 1619-ben
+                alakult Pozsonyban, de Kassa is mézeskalácsos központnak számított a 17. században. 1713-ból ismert a
+                debreceni mézeskalácsosok céhének szabályzata és talán a mai napig is Debrecen az egyik legjelentősebb
+                központ, ahol évszázadok óta kiváló minőségben készítik. A mézeskalács termékek készítése és fogyasztása
+                a cukor és az ebből készített cukrász termékek megjelenésével csökkent, de továbbra is azért találkozni
+                vásárokon a mézeskalács árusokkal és természetesen már az interneten is hódít.[1]
+
+            </p>
+            <p>
+                A méz volt a nádcukor, majd a répacukor modern kori elterjedéséig az egyetlen édesítőszer, melyből
+                tartós és tápláló száraz sütemény készíthető, így a mézeskalács sok nép több ezer év óta ismert eledele.
+
+            </p>
+            <p>
+                A méz drágasága miatt, csak ünnepi alkalmakkor készítettek belőle süteményt. Az 1200-as évektől
+                kolostorok készítettek vallásos tárgyú figurákat, életképeket. Idővel "mézesbábos" céhek is alakultak,
+                melyek míves díszítéseket készítettek rá, így kedvelt ajándékká vált. A meseirodalomban is fellelhető,
+                Grimm testvérek meséjében, a "Jancsi és Juliskában" szerepel egy mézeskalács ház, a csábítás
+                szimbólumaként. A századok alatt a díszítésnek jelképi rendszere alakult ki, vagyis mind a formájában,
+                mind a díszítésében meghatározott eseményhez köthető egy szépen elkészített mézeskalács. Kedvelt vásári
+                ajándékok a mézeskalács szív, a huszár, a kard, a baba és a tányér.
+
+            </p> <a href="https://hu.wikipedia.org/wiki/M%C3%A9zeskal%C3%A1cs_(s%C3%BCtem%C3%A9ny)"
+                target="_blank"><button>Folytatás</button></a>
+        </section>
 
     </div>
+    <div id="recept">
+        <section class="imgBox"><img src="háziko2.png" alt=""></section>
+        <section class="textBox">
+            <h2>Mézeskalács ház Recept</h2>
+            <section class="hozzavalok">
+
+                <h3>Hozzávalók</h3>
+                <ul>
+                    <li> tészta</li>
+                    <li> 1 kg finomliszt</li>
+                    <li>30 dkg porcukor</li>
+                    <li> 3 teáskanál szódabikarbóna</li>
+                    <li> 14 g mézeskalács fűszerkeverék (1 tasak)</li>
+                    <li> 30 dkg margarin</li>
+                    <li> 250 ml méz</li>
+                    <li> 3 db tojás</li>
+                    <li> máz</li>
+                    <li>2 db tojásfehérje</li>
+                    <li>30 dkg porcukor</li>
+                </ul>
+            </section>
+
+            <section>
+                <h3>Elkészítés</h3>
+                tészta
+                <p>
+                    Először a száraz hozzávalókat keverjük alaposan össze, majd jöhet a tojás, a méz és a picit
+                    megolvasztott
+                    margarin. Addig gyúrjuk, míg egynemű, illatos, rugalmas tésztát nem kapunk.
+                    3 részre osztjuk, majd egyenként kinyújtjuk 0,5 cm-es vastagságúra a tésztát. Kiszaggatjuk,
+                    sütőlemezre
+                    tesszük, ne szorosan, mert sülés közben összenőnek. Megsütjük.
+                    máz
+                    2 tojásfehérjét félig felverünk robotgéppel, majd 30 dkg porcukrot apránként hozzádolgozunk, és
+                    keményedésig
+
+                    keverjük.</p>
+
+                <ul>
+                    Sütés hőfoka: 180 °C
+                    Sütés módja: alul-felül sütés
+                    Sütés ideje: 10 perc
+                    Receptjellemzők
+                    fogás: desszert
+                </ul>
+            </section>
+
+        </section>
+    </div>
+
+
 </body>
 
 </html>
